{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 140,
  "lineage": "20e17513-9273-ef70-60d8-9aaab54e9f4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wordpress_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07dce04090a571a85",
            "associate_with_private_ip": "10.2.0.247",
            "association_id": "eipassoc-02256a8418759dc83",
            "domain": "vpc",
            "id": "eipalloc-07dce04090a571a85",
            "instance": "i-04824c2a347849dc0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0418b68739d49a284",
            "private_dns": "ip-10-2-0-247.ec2.internal",
            "private_ip": "10.2.0.247",
            "public_dns": "ec2-54-236-216-149.compute-1.amazonaws.com",
            "public_ip": "54.236.216.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wordpress-server-eip"
            },
            "tags_all": {
              "Name": "wordpress-server-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_db_instance.wordpress-db-mysql",
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_instance.Wordpress-Server",
            "aws_security_group.wordpress_sg",
            "data.aws_ami.latest_amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wordpress-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1a6835595fb9246",
            "arn": "arn:aws:ec2:us-east-1:777531359794:instance/i-04824c2a347849dc0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSM-Instance-Profile",
            "id": "i-04824c2a347849dc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pro-Core-Internship-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0418b68739d49a284",
            "private_dns": "ip-10-2-0-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.247",
            "public_dns": "ec2-18-210-15-80.compute-1.amazonaws.com",
            "public_ip": "18.210.15.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06733ee935a35c0b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07868a6e29f6028f2",
            "tags": {
              "Name": "Wordpress-Server"
            },
            "tags_all": {
              "Name": "Wordpress-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9b7b805901f7fa2"
            ]
          },
          "dependencies": [
            "aws_db_instance.wordpress-db-mysql",
            "aws_iam_instance_profile.ssm_instance_profile",
            "aws_security_group.wordpress_sg",
            "data.aws_ami.latest_amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777531359794:security-group/sg-05c10e6689df929fd",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-05c10e6689df929fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9b7b805901f7fa2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS-Database-SG",
            "name_prefix": "",
            "owner_id": "777531359794",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0933c4272fcffaf39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777531359794:security-group/sg-0b9b7b805901f7fa2",
            "description": "Security group for Wordpress server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9b7b805901f7fa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Wordpress-Server-SG",
            "name_prefix": "",
            "owner_id": "777531359794",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0933c4272fcffaf39"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}